--- a/requirements.txt
+++ b/requirements.txt
@@ -7,10 +7,12 @@ streamlit==1.33.0
 pandas==2.1.2
 urllib3==2.2.2
 python-dotenv==1.0.0
-scikit-learn==1.4.1.post1
-ollama==0.2.1
-Flask==3.0.3
 stripe==10.5.0
 uvicorn==0.30.1
 pymongo
 twilio==9.2.3
+pyotp==2.9.0
+newsapi-python==0.2.7
+fastapi==0.111.0
+fastapi-cli==0.0.4
+fireworks-ai==0.15.1
